# h5sparse

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
conda-recipe/h5sparse/: meta.yaml
h5sparse/: __init__.py  h5sparse.py  tests.py
src/h5sparse/: __init__.py
tests/: tests.py
